// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<form
  className="abs-width-400 padded"
  onSubmit={[MockFunction]}
>
  <h2>
    hotspots.form.title
  </h2>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={true}
        onCheck={[MockFunction]}
        value="FIXED"
      >
        <h3>
          hotspots.status_option.FIXED
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.FIXED.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="SAFE"
      >
        <h3>
          hotspots.status_option.SAFE
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.SAFE.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="ADDITIONAL_REVIEW"
      >
        <h3>
          hotspots.status_option.ADDITIONAL_REVIEW
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.ADDITIONAL_REVIEW.description
      </div>
    </div>
  </div>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <label
      className="little-spacer-bottom"
    >
      hotspots.form.comment
    </label>
    <textarea
      autoFocus={true}
      className="form-field fixed-width spacer-bottom"
      onChange={[Function]}
      placeholder=""
      rows={6}
      value="written comment"
    />
    <MarkdownTips />
  </div>
  <div
    className="text-right"
  >
    <SubmitButton
      disabled={false}
    >
      hotspots.form.submit.TO_REVIEW
    </SubmitButton>
  </div>
</form>
`;

exports[`should render correctly: Submitting 1`] = `
<form
  className="abs-width-400 padded"
  onSubmit={[MockFunction]}
>
  <h2>
    hotspots.form.title
  </h2>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={true}
        onCheck={[MockFunction]}
        value="FIXED"
      >
        <h3>
          hotspots.status_option.FIXED
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.FIXED.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="SAFE"
      >
        <h3>
          hotspots.status_option.SAFE
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.SAFE.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="ADDITIONAL_REVIEW"
      >
        <h3>
          hotspots.status_option.ADDITIONAL_REVIEW
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.ADDITIONAL_REVIEW.description
      </div>
    </div>
  </div>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <label
      className="little-spacer-bottom"
    >
      hotspots.form.comment
    </label>
    <textarea
      autoFocus={true}
      className="form-field fixed-width spacer-bottom"
      onChange={[Function]}
      placeholder=""
      rows={6}
      value="written comment"
    />
    <MarkdownTips />
  </div>
  <div
    className="text-right"
  >
    <i
      className="spinner spacer-right"
    />
    <SubmitButton
      disabled={true}
    >
      hotspots.form.submit.TO_REVIEW
    </SubmitButton>
  </div>
</form>
`;

exports[`should render correctly: safe option selected 1`] = `
<form
  className="abs-width-400 padded"
  onSubmit={[MockFunction]}
>
  <h2>
    hotspots.form.title
  </h2>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="FIXED"
      >
        <h3>
          hotspots.status_option.FIXED
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.FIXED.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={true}
        onCheck={[MockFunction]}
        value="SAFE"
      >
        <h3>
          hotspots.status_option.SAFE
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.SAFE.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="ADDITIONAL_REVIEW"
      >
        <h3>
          hotspots.status_option.ADDITIONAL_REVIEW
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.ADDITIONAL_REVIEW.description
      </div>
    </div>
  </div>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <label
      className="little-spacer-bottom"
    >
      hotspots.form.comment
    </label>
    <textarea
      autoFocus={true}
      className="form-field fixed-width spacer-bottom"
      onChange={[Function]}
      placeholder="hotspots.form.comment.placeholder"
      rows={6}
      value="written comment"
    />
    <MarkdownTips />
  </div>
  <div
    className="text-right"
  >
    <SubmitButton
      disabled={false}
    >
      hotspots.form.submit.TO_REVIEW
    </SubmitButton>
  </div>
</form>
`;

exports[`should render correctly: user selected 1`] = `
<form
  className="abs-width-400 padded"
  onSubmit={[MockFunction]}
>
  <h2>
    hotspots.form.title
  </h2>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="FIXED"
      >
        <h3>
          hotspots.status_option.FIXED
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.FIXED.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={false}
        onCheck={[MockFunction]}
        value="SAFE"
      >
        <h3>
          hotspots.status_option.SAFE
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.SAFE.description
      </div>
    </div>
    <div
      className="big-spacer-top"
    >
      <Radio
        checked={true}
        onCheck={[MockFunction]}
        value="ADDITIONAL_REVIEW"
      >
        <h3>
          hotspots.status_option.ADDITIONAL_REVIEW
        </h3>
      </Radio>
      <div
        className="radio-button-description"
      >
        hotspots.status_option.ADDITIONAL_REVIEW.description
      </div>
    </div>
  </div>
  <div
    className="form-field huge-spacer-left"
  >
    <label>
      hotspots.form.assign_to
    </label>
    <HotspotAssigneeSelect
      onSelect={[MockFunction]}
    />
  </div>
  <div
    className="display-flex-column big-spacer-bottom"
  >
    <label
      className="little-spacer-bottom"
    >
      hotspots.form.comment
    </label>
    <textarea
      autoFocus={true}
      className="form-field fixed-width spacer-bottom"
      onChange={[Function]}
      placeholder=""
      rows={6}
      value="written comment"
    />
    <MarkdownTips />
  </div>
  <div
    className="text-right"
  >
    <SubmitButton
      disabled={false}
    >
      hotspots.form.submit.TO_REVIEW
    </SubmitButton>
  </div>
</form>
`;
